Creates other product items in popular products section and correct margins and paddings between them

--- a/index.html
+++ b/index.html
@@ -613,7 +613,122 @@
           <h2 class="section-title mb-3">popular PRODUCTS</h2>
           <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
           <div class="popular-prods__list row">
-            <div class="popular-prods__item col-4 mt-5">
+            <div class="popular-prods__item col-4 mb-3">
+              <a href="#" class="popular-prods__img mb-4">
+                <img src="img/product_image-7.jpg" alt="Popular product images">
+              </a>
+              <div class="prod-categories__hover-buttons">
+                <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+              </div>
+              <span class="item__category">category</span>
+              <a href="#" class="item__title mb-2">Asus-PadFone</a>
+              <div class="item__rating">
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-regular"></span>
+              </div>
+              <div class="item__price-list mb-4">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+            </div>
+            <div class="popular-prods__item col-4 mb-3">
+              <a href="#" class="popular-prods__img mb-4">
+                <img src="img/product_image-7.jpg" alt="Popular product images">
+              </a>
+              <div class="prod-categories__hover-buttons">
+                <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+              </div>
+              <span class="item__category">category</span>
+              <a href="#" class="item__title mb-2">Asus-PadFone</a>
+              <div class="item__rating">
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-regular"></span>
+              </div>
+              <div class="item__price-list mb-4">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+            </div>
+            <div class="popular-prods__item col-4 mb-3">
+              <a href="#" class="popular-prods__img mb-4">
+                <img src="img/product_image-7.jpg" alt="Popular product images">
+              </a>
+              <div class="prod-categories__hover-buttons">
+                <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+              </div>
+              <span class="item__category">category</span>
+              <a href="#" class="item__title mb-2">Asus-PadFone</a>
+              <div class="item__rating">
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-regular"></span>
+              </div>
+              <div class="item__price-list mb-4">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+            </div>
+            <div class="popular-prods__item col-4 mb-3">
+              <a href="#" class="popular-prods__img mb-4">
+                <img src="img/product_image-7.jpg" alt="Popular product images">
+              </a>
+              <div class="prod-categories__hover-buttons">
+                <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+              </div>
+              <span class="item__category">category</span>
+              <a href="#" class="item__title mb-2">Asus-PadFone</a>
+              <div class="item__rating">
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-regular"></span>
+              </div>
+              <div class="item__price-list mb-4">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+            </div>
+            <div class="popular-prods__item col-4 mb-3">
+              <a href="#" class="popular-prods__img mb-4">
+                <img src="img/product_image-7.jpg" alt="Popular product images">
+              </a>
+              <div class="prod-categories__hover-buttons">
+                <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+                <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+                <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+              </div>
+              <span class="item__category">category</span>
+              <a href="#" class="item__title mb-2">Asus-PadFone</a>
+              <div class="item__rating">
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-solid"></span>
+                <span class="icon-font-star-regular"></span>
+              </div>
+              <div class="item__price-list mb-4">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+            </div>
+            <div class="popular-prods__item col-4 mb-3">
               <a href="#" class="popular-prods__img mb-4">
                 <img src="img/product_image-7.jpg" alt="Popular product images">
               </a>
