A little changes of hover buttons in popular products section and little changes and a little changes for hover starting

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-1.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -381,7 +381,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-2.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -396,7 +396,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-3.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -411,7 +411,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -426,7 +426,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-5.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -441,7 +441,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-6.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -456,7 +456,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-7.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -471,7 +471,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-8.jpg" class="prod-categories__img" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -488,7 +488,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -503,7 +503,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-5.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -518,7 +518,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-6.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -533,7 +533,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-7.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -550,7 +550,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-4.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -565,7 +565,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-3.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -580,7 +580,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-2.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -595,7 +595,7 @@
                 <a href="#" class="prod-categories__img mb-4 d-block">
                   <img src="img/prod_categor-1.jpg" alt="Product categories image">
                 </a>
-                <div class="prod-categories__hover-buttons">
+                <div class="hover-buttons__list">
                   <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                   <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                   <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
@@ -614,17 +614,17 @@
           <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
           <div class="popular-prods__list row">
             <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img mb-4">
+              <a href="#" class="popular-prods__img hov-btn-call mb-4">
                 <img src="img/product_image-7.jpg" alt="Popular product images">
               </a>
-              <div class="prod-categories__hover-buttons">
+              <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                 <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                 <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
               </div>
               <span class="item__category">category</span>
-              <a href="#" class="item__title mb-2">Asus-PadFone</a>
-              <div class="item__rating">
+              <a href="#" class="item__titl">Asus-PadFone</a>
+              <div class="item__rating my-1">
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
@@ -637,17 +637,17 @@
               </div>
             </div>
             <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img mb-4">
+              <a href="#" class="popular-prods__img hov-btn-call mb-4">
                 <img src="img/product_image-7.jpg" alt="Popular product images">
               </a>
-              <div class="prod-categories__hover-buttons">
+              <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                 <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                 <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
               </div>
               <span class="item__category">category</span>
-              <a href="#" class="item__title mb-2">Asus-PadFone</a>
-              <div class="item__rating">
+              <a href="#" class="item__title">Asus-PadFone</a>
+              <div class="item__rating my-1">
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
@@ -660,17 +660,17 @@
               </div>
             </div>
             <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img mb-4">
+              <a href="#" class="popular-prods__img hov-btn-call mb-4">
                 <img src="img/product_image-7.jpg" alt="Popular product images">
               </a>
-              <div class="prod-categories__hover-buttons">
+              <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                 <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                 <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
               </div>
               <span class="item__category">category</span>
-              <a href="#" class="item__title mb-2">Asus-PadFone</a>
-              <div class="item__rating">
+              <a href="#" class="item__title">Asus-PadFone</a>
+              <div class="item__rating my-1">
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
@@ -683,17 +683,17 @@
               </div>
             </div>
             <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img mb-4">
+              <a href="#" class="popular-prods__img hov-btn-call mb-4">
                 <img src="img/product_image-7.jpg" alt="Popular product images">
               </a>
-              <div class="prod-categories__hover-buttons">
+              <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                 <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                 <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
               </div>
               <span class="item__category">category</span>
-              <a href="#" class="item__title mb-2">Asus-PadFone</a>
-              <div class="item__rating">
+              <a href="#" class="item__title">Asus-PadFone</a>
+              <div class="item__rating my-1">
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
@@ -706,17 +706,17 @@
               </div>
             </div>
             <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img mb-4">
+              <a href="#" class="popular-prods__img hov-btn-call mb-4">
                 <img src="img/product_image-7.jpg" alt="Popular product images">
               </a>
-              <div class="prod-categories__hover-buttons">
+              <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                 <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                 <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
               </div>
               <span class="item__category">category</span>
-              <a href="#" class="item__title mb-2">Asus-PadFone</a>
-              <div class="item__rating">
+              <a href="#" class="item__title">Asus-PadFone</a>
+              <div class="item__rating my-1">
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
@@ -729,17 +729,17 @@
               </div>
             </div>
             <div class="popular-prods__item col-4 mb-3">
-              <a href="#" class="popular-prods__img mb-4">
+              <a href="#" class="popular-prods__img hov-btn-call mb-4">
                 <img src="img/product_image-7.jpg" alt="Popular product images">
               </a>
-              <div class="prod-categories__hover-buttons">
+              <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
                 <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
                 <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
               </div>
               <span class="item__category">category</span>
-              <a href="#" class="item__title mb-2">Asus-PadFone</a>
-              <div class="item__rating">
+              <a href="#" class="item__title">Asus-PadFone</a>
+              <div class="item__rating my-1">
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
