Adds markup for sidebar categories

--- a/index.html
+++ b/index.html
@@ -350,7 +350,41 @@
   </div>
   <main class="container">
     <div class="row">
-      <div class="sidebar col-3"></div>
+      <div class="sidebar col-3">
+        <div class="sidebar__categories">
+          <h3 class="sidebar-categories__title">Categories</h3>
+          <ul class="sidebar-categories__list list-group">
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">Notebook</a>
+              ul>li
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">tablet</a>
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">Electronic books</a>
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">Computers</a>
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">Components</a>
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">Office equipment</a>
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">games</a>
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">Network equipment</a>
+            </li>
+            <li class="sidebar-categories__item">
+              <a href="#" class="sidebar-categories__link">Accessories</a>
+            </li>
+          </ul>
+        </div>
+      </div>
       <div class="content col-9">
         <section class="prod-categories">
           <h2 class="section-title mb-3">product categories</h2>
