Creates sidebar categories of first level

--- a/index.html
+++ b/index.html
@@ -354,33 +354,105 @@
         <div class="sidebar__categories">
           <h3 class="sidebar-categories__title">Categories</h3>
           <ul class="sidebar-categories__list list-group">
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">Notebook</a>
-              ul>li
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Notebook
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level
+                      <ul class="sidebar-categories__sub-list">
+                        <li>
+                          <a href="#">Three level
+                            <ul class="sidebar-categories__sub-list">
+                              <li><a href="#">Super deep level
+                                <ul class="sidebar-categories__sub-list">
+                                  <li><a href="#">Deep web!
+                                    <ul class="sidebar-categories__sub-list">
+                                      <li><a href="#">Silent house...</a></li>
+                                    </ul>
+                                  </a></li>
+                                </ul>
+                              </a></li>
+                            </ul>
+                          </a>
+                        </li>
+                      </ul>
+                    </a>
+                   </li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>              
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">tablet</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">tablet
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">Electronic books</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Electronic books
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">Computers</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Computers
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">Components</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Components
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">Office equipment</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Office equipment
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">games</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">games
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">Network equipment</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Network equipment
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
-            <li class="sidebar-categories__item">
-              <a href="#" class="sidebar-categories__link">Accessories</a>
+            <li class="sidebar-categories__item list-group-item list-group-item-action">
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Accessories
+                <ul class="sidebar-categories__sub-list">
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                  <li><a href="#">Two level</a></li>
+                </ul>
+              </a>
             </li>
           </ul>
         </div>
